--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,2 +1,9 @@
 add_llvm_executable(test test.cpp)
-target_link_libraries(test PUBLIC MLIRRelayDialect MLIRFuncDialect MLIRRelayFrontend MLIRRelayTransforms)
+target_link_libraries(test 
+    PUBLIC 
+    MLIRRelayDialect 
+    MLIRFuncDialect 
+    MLIRRelayFrontend 
+    MLIRRelayTransforms
+    MLIRRelayToAffine
+)
