Lower to LLVM IR and code generation.

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,1 +1,24 @@
-add_subdirectory(RelayToAffine)
+add_mlir_conversion_library(TVMMLIRConversion
+    RelayToAffine.cpp
+    AffineToLLVM.cpp
+
+    DEPENDS
+    TVMMLIRConversionPassIncGen
+
+    LINK_LIBS PUBLIC
+    MLIRPass
+    MLIRTransforms
+    MLIRSupport
+    MLIRDialectUtils
+    MLIRRelayDialect
+    MLIRAffineDialect
+    MLIRArithmeticDialect
+    MLIRMemRefDialect
+    MLIRLLVMDialect
+    MLIRArithmeticTransforms
+    MLIRAffineToStandard
+    MLIRControlFlowToLLVM
+    MLIRFuncToLLVM
+    MLIRMemRefToLLVM
+    MLIRSCFToControlFlow
+    )
