--- a/lib/Support/CMakeLists.txt
+++ b/lib/Support/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(TVMMLIRSupport Common.cpp)
+add_library(TVMMLIRSupport Common.cpp MemRef.cpp)
 target_link_libraries(TVMMLIRSupport fmt::fmt)
