Try optimizations on Affine operations.

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -5,6 +5,7 @@ target_link_libraries(test
     MLIRRelayFrontend 
     MLIRRelayTransforms
     TVMMLIRConversion
+    TVMMLIRTransforms
     MLIRExecutionEngine
     LLVMX86CodeGen
 )
