--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(Support)
 add_subdirectory(Dialect)
 add_subdirectory(Frontend)
 add_subdirectory(Conversion)
+add_subdirectory(Transforms)
