--- a/include/tvm-mlir/Transforms/CMakeLists.txt
+++ b/include/tvm-mlir/Transforms/CMakeLists.txt
@@ -1,4 +1,4 @@
 set(LLVM_TARGET_DEFINITIONS Passes.td)
-mlir_tablegen(Passes.h.inc -gen-pass-decls -name Transforms)
+mlir_tablegen(Passes.h.inc -gen-pass-decls -name TVMMLIRTransforms)
 add_public_tablegen_target(TVMMLIRTransformsPassIncGen)
 add_mlir_doc(Passes TransformsPasses ./ -gen-pass-doc)
