Parallelize loops and lower to OpenMP.

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -6,6 +6,8 @@ target_link_libraries(test
     MLIRRelayTransforms
     TVMMLIRConversion
     TVMMLIRTransforms
+    MLIRSCFToOpenMP
     MLIRExecutionEngine
+    MLIROpenMPToLLVMIRTranslation
     LLVMX86CodeGen
 )
