--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 project(tvm-mlir LANGUAGES C CXX)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 if(MSVC)
-    add_compile_options(/wd4005 /wd4251 /wd4530)
+    add_compile_options(/wd4005 /wd4251 /wd4530 /wd4996)
 else()
     add_compile_options(
         -frtti
