--- a/lib/Frontend/CMakeLists.txt
+++ b/lib/Frontend/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(MLIRRelayFrontend RelayImporter.cpp OpConverter.cpp)
-target_link_libraries(MLIRRelayFrontend TVMMLIRSupport tvm)
+target_link_libraries(MLIRRelayFrontend RelayMLIRSupport tvm)
