--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(tvm-mlir LANGUAGES C CXX)
+project(relay-mlir LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 20)
 
 if(MSVC)
